# recap

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTINUATION.md  DECISIONS.md  HANDOFF.md  MASTER_BRIEF.md  PRD.md  README.md  TASKS.md  pyproject.toml  requirements.txt
docs/: product_roadmap.md  ux_inspiration.md
docs/research/: Claudesreply.md  codex-deep-research-report.md  codex-deep-research-report_v2.md  gemini_v1-Automating Video Analysis and Documentation.md  gemini_v2-Synthesis of Multimodal Video Processing_ Architectures for Automated Transcription, Semantic Summarization, and Intelligent Visual Documentation.md  oclaw_notion_report.md  oclaw_reply.md
recap/: __init__.py  cli.py  job.py  ui.py
recap/stages/: assemble.py  chapters.py  dedupe.py  export_docx.py  export_html.py  ingest.py  insights.py  normalize.py  rank.py  report_helpers.py  scenes.py  shortlist.py  similarity.py  transcribe.py  verify.py  window.py
scripts/: verify_api.py  verify_reports.py  verify_ui.py
scripts/fixtures/minimal_job/: chapter_candidates.json  job.json  metadata.json  selected_frames.json  transcript.json
web/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/__tests__/: AppShell.test.tsx  ArtifactGrid.test.tsx  ChapterSidebar.test.tsx  FrameReviewPage.test.tsx  JobDetailPage.test.tsx  JobDetailPagePolling.test.tsx  JobLibrary.test.tsx  JobProgressPanel.test.tsx  JobsIndexPage.test.tsx  NewJobPage.test.tsx  RecordingPanel.test.tsx  RunActionsFinalDocument.test.tsx  RunActionsPanel.test.tsx  (+9 more)
(+27 files in other folders)
