[project]
name = "recap"
version = "0.1.0"
description = "Local-first video-to-documentation pipeline (Phase 1 + opt-in Phase 2 slices)."
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.3",
    "scenedetect[opencv]>=0.6.4",
    "ImageHash>=4.3.1",
    "Pillow>=10.0.0",
    "scikit-image>=0.22",
    "pytesseract>=0.3.10",
    "open_clip_torch>=2.24",
    "torch>=2.1",
]

[project.scripts]
recap = "recap.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["recap*"]
